--- a/rick_and_morty/pubspec.yaml
+++ b/rick_and_morty/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   rxdart: ^0.18.0
   get_it: ^3.0.1
   flutter_svg: ^0.19.3
+  shimmer: ^1.1.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
